Manifest/PiHole/PiHole-Deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
    app.kubernetes.io/instance: pihole
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - image: visibilityspots/cloudflared
          imagePullPolicy: IfNotPresent
          name: cloudflared
        - env:
            - name: TZ
              value: "America/Chicago"
            - name: WEBPASSWORD
              value: Fd943505 # change this!
            - name: FTLCONF_REPLY_ADDR4
              value: pihole
            - name: PIHOLE_DNS_
              value: 127.0.0.1#5054
          image: pihole/pihole:latest
          imagePullPolicy: Always
          name: pihole
          ports:
            - containerPort: 80
              name: pihole-http
              protocol: TCP
            - containerPort: 53
              name: dns
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 443
              name: pihole-ssl
              protocol: TCP
            - containerPort: 67
              name: client-udp
              protocol: UDP
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      restartPolicy: Always
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: client-udp
      port: 67
      protocol: UDP
      targetPort: 67
    - name: pihole-http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: pihole-https
      port: 443
      protocol: TCP
      targetPort: 443
    - name: dns
      port: 53
      protocol: TCP
      targetPort: 53
  selector:
    app: pihole
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.40.60 # this is your DNS IP, NOT THE GUI!
  type: LoadBalancer
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.pihole3.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: pihole
          port: 80
    - match: Host(`pihole3.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: pihole
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-outpost
          namespace: traefik
        - name: rate-limit
          namespace: traefik
  tls:
    secretName: cybertronlabs-tls # change to your cert name
